--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -1,4 +1,5 @@
 name: Publish Docs
+
 on:
   push:
     branches:
@@ -9,20 +10,20 @@ jobs:
     name: Docs builder and publisher
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: 3.11
           architecture: x64
+          cache: 'pip'
       - name: Install Python dependencies
         run: |
-          python -m pip install --upgrade pip setuptools wheel
+          pip install pip-tools
+          python -m piptools compile --resolver=backtracking --extra=docs -o requirements.txt pyproject.toml
           pip install -r requirements.txt
-          pip install -r requirements_dev.txt
       - name: Install Gdstk
         run: python setup.py install --user
       - name: Build docs
-        run: make docs
+        run: python setup.py build_sphinx
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
