--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -1,46 +1,50 @@
-name: Build & publish PyPI packages
+name: Build and publish packages
 
-on: [push, pull_request, workflow_dispatch]
+on:
+  push:
+    tags:
+      - 'v*.*'
+  workflow_dispatch:
 
 jobs:
-  build_manylinux:
-    name: Build wheels for Manylinux
-    runs-on: ubuntu-latest
+  build_wheels:
     strategy:
       fail-fast: false
       max-parallel: 12
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+    name: Build wheels on ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.3
+      - uses: pypa/cibuildwheel@v2.12.3
         env:
-          CIBW_MANYLINUX_X86_64_IMAGE: manylinux2014
+          CIBW_SKIP: "cp36-* cp37-* pp* *_ppc64le *_s390x *-macosx_universal2"
+          CIBW_ARCHS_MACOS: "x86_64 arm64"
       - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/*.whl
 
   build_windows:
-    name: Build wheels for Windows (${{ matrix.python-version }})
-    runs-on: windows-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: ["3.7", "3.8", "3.9", "3.10", "3.11"]
+    name: Build wheels for Windows (${{ matrix.python-version }})
+    runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up MSVC
-        uses: ilammy/msvc-dev-cmd@v1
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+      - uses: ilammy/msvc-dev-cmd@v1
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
-          cache: pip
+          cache: 'pip'
       - name: Install build dependencies
         run: |
-          python -m pip install --upgrade pip wheel oldest-supported-numpy
-          python -m pip install ninja
-          python -m pip install conan==1.58.0
-          conan install zlib/1.2.13@ -s compiler.version=16 -g cmake_paths
+          pip install pip-tools ninja conan
+          python -m piptools compile --resolver=backtracking -o requirements.txt pyproject.toml
+          pip install -r requirements.txt
+          conan install zlib -s compiler.version=16 -g cmake_paths
       - name: Build Python ${{ matrix.python-version }} wheel
         run: |
           python setup.py bdist_wheel
@@ -51,65 +55,28 @@ jobs:
         with:
           path: "dist/*.whl"
 
-  build_m1:
-    name: Build wheels for M1
-    runs-on: macos-11
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.3
-        env:
-          CIBW_ARCHS_MACOS: x86_64 arm64
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
-
-  build_linux:
-    name: Build source and linux wheels
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Build wheels
-        uses: pypa/cibuildwheel@v2.12.3
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
-
   build_sdist:
     name: Build source distribution
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Build sdist
         run: pipx run build --sdist
-
       - uses: actions/upload-artifact@v3
         with:
           path: dist/*.tar.gz
 
   upload_pypi:
     name: Upload wheel to PyPI
-    needs: [build_sdist, build_linux, build_windows, build_m1, build_manylinux]
+    needs: [build_sdist, build_wheels, build_windows]
     runs-on: ubuntu-latest
-    # upload to PyPI on every tag starting with 'v'
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-    # alternatively, to publish when a GitHub Release is created, use the following rule:
-    # if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/download-artifact@v3
         with:
-          # unpacks default artifact into dist/
-          # if `name: artifact` is omitted, the action will create extra parent dir
           name: artifact
           path: dist
-
       - uses: pypa/gh-action-pypi-publish@v1.8.5
         with:
           user: __token__
           password: ${{ secrets.PYPI_API_TOKEN }}
-          # To test: repository_url: https://test.pypi.org/legacy/
