--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,22 +1,14 @@
-name: release gdstk installer
+name: Create release
+
 on:
-  release:
-    types: [created, published]
   push:
     branches: [master]
-    tags: [v*]
+    tags:
+      - 'v*.*'
 
 jobs:
   release_add:
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-    runs-on: ${{ matrix.os }}
-    strategy:
-      max-parallel: 12
-      matrix:
-        python-version: ["3.8"]
-        os: [ubuntu-latest, macos-latest, windows-latest]
+    runs-on: ubuntu-latest
     steps:
-      - name: Cancel Workflow Action
-        uses: styfle/cancel-workflow-action@0.11.0
-      - name: Release
-        uses: softprops/action-gh-release@v1
+      - uses: actions/checkout@v3
+      - uses: softprops/action-gh-release@v1
