Update badges, fix conan version
Signed-off-by: Lucas Heitzmann Gabrielli <heitzmann@gmail.com>

--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -40,7 +40,7 @@ jobs:
           cache: 'pip'
       - name: Install build dependencies
         run: |
-          pip install pip-tools ninja conan
+          pip install pip-tools ninja conan==1.60
           python -m piptools compile --resolver=backtracking -o requirements.txt pyproject.toml
           pip install -r requirements.txt
           conan install zlib/1.2.13@ -s compiler.version=16 -g cmake_paths
