--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pypa/cibuildwheel@v2.12.3
         env:
-          CIBW_SKIP: "cp36-* cp37-* pp* *_ppc64le *_s390x *-macosx_universal2"
+          CIBW_SKIP: "cp36-* pp* *_ppc64le *_s390x *-macosx_universal2"
           CIBW_ARCHS_MACOS: "x86_64 arm64"
       - uses: actions/upload-artifact@v3
         with:
