--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -40,6 +40,7 @@ jobs:
           cache: 'pip'
       - name: Install build dependencies
         run: |
+          pip install --upgrade pip setuptools wheel
           pip install pip-tools ninja conan==1.60
           python -m piptools compile --resolver=backtracking -o requirements.txt pyproject.toml
           pip install -r requirements.txt
