Rename default branch in actions
Signed-off-by: Lucas Heitzmann Gabrielli <heitzmann@gmail.com>

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -2,8 +2,8 @@ name: Publish Docs
 
 on:
   push:
-    branches:
-      - master
+    branches: [main]
+
 jobs:
   deploy-docs:
     runs-on: ubuntu-latest
