--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -19,6 +19,7 @@ jobs:
           cache: 'pip'
       - name: Install Python dependencies
         run: |
+          pip install --upgrade pip setuptools wheel
           pip install pip-tools
           python -m piptools compile --resolver=backtracking --extra=docs -o requirements.txt pyproject.toml
           pip install -r requirements.txt
