Revert previous changes and remove 3.12 from Windows tests
Large M1/M2 runners are not really available yet:
https://github.com/actions/runner-images/issues/8439#issuecomment-1755601587

Signed-off-by: Lucas Heitzmann Gabrielli <heitzmann@gmail.com>

--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, macos-latest-large]
+        os: [ubuntu-latest, macos-latest]
         python-version: ['3.8', '3.11', '3.12']
     name: Test for ${{ matrix.python-version }} on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
@@ -45,7 +45,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.8', '3.11', '3.12']
+        python-version: ['3.8', '3.11']
     defaults:
       run:
         shell: pwsh
