--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -21,7 +21,7 @@ jobs:
       - uses: pypa/cibuildwheel@v2.16.2
         env:
           CIBW_SKIP: "cp36-* cp37-* pp* *_ppc64le *_s390x"
-          CIBW_ARCHS_MACOS: "x86_64 arm64"
+          CIBW_ARCHS_MACOS: "x86_64 universal2"
           CIBW_BEFORE_ALL_LINUX: >
             yum install -y wget || apk add qhull-dev;
             wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
