--- a/.github/workflows/pypi-packages.yml
+++ b/.github/workflows/pypi-packages.yml
@@ -27,9 +27,14 @@ jobs:
             wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
             tar -xf v8.0.2.tar.gz &&
             cd qhull-8.0.2 &&
-            cmake -S . -B build &&
+            cmake -DBUILD_APPLICATIONS=OFF -S . -B build &&
             cmake --build build --target install
-          CIBW_BEFORE_ALL_MACOS: brew install qhull
+          CIBW_BEFORE_ALL_MACOS: >
+            wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
+            tar -xf v8.0.2.tar.gz &&
+            cd qhull-8.0.2 &&
+            cmake -DCMAKE_OSX_ARCHITECTURES='x86_64;arm64' -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_LIBS=ON -DBUILD_APPLICATIONS=OFF -S . -B build &&
+            cmake --build build --target install
       - uses: actions/upload-artifact@v3
         with:
           path: ./wheelhouse/gdstk*.whl
