Add cmake_modules to source dist (#243)
Signed-off-by: Lucas Heitzmann Gabrielli <heitzmann@gmail.com>

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,7 +3,7 @@ graft include
 graft python
 graft src
 graft docs
-graft tests
+graft cmake_modules
 include CHANGELOG.md
 include CMakeLists.txt
 include LICENSE
