--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -7,29 +7,6 @@ on:
   workflow_dispatch:
 
 jobs:
-  build_manylinux2014:
-    name: Build wheels on manylinux2014
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pypa/cibuildwheel@v2.17.0
-        env:
-          CIBW_BUILD: "*-manylinux_x86_64 *-manylinux_i686 *-manylinux_aarch64"
-          CIBW_SKIP: "cp36-* cp37-* cp38-* pp*"
-          CIBW_MANYLINUX_X86_64_IMAGE: "manylinux2014"
-          CIBW_MANYLINUX_I686_IMAGE: "manylinux2014"
-          CIBW_MANYLINUX_AARCH64_IMAGE: "manylinux2014"
-          CIBW_BEFORE_ALL_LINUX: >
-            yum install -y wget &&
-            wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
-            tar -xf v8.0.2.tar.gz &&
-            cd qhull-8.0.2 &&
-            cmake -S . -B build &&
-            cmake --build build --target install
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse/*.whl
-
   build_manylinux_2_28:
     name: Build wheels on manylinux_2_28
     runs-on: ubuntu-latest
@@ -146,7 +123,7 @@ jobs:
 
   upload_pypi:
     name: Upload wheel to PyPI
-    needs: [build_manylinux2014, build_manylinux_2_28, build_musllinux, build_macos, build_windows]
+    needs: [build_manylinux_2_28, build_musllinux, build_macos, build_windows]
     runs-on: ubuntu-latest
     if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     steps:
