--- a/.github/workflows/publish-packages.yml
+++ b/.github/workflows/publish-packages.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pypa/cibuildwheel@v2.21
+      - uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: "*-manylinux_x86_64 *-manylinux_i686 *-manylinux_aarch64"
-          CIBW_SKIP: "cp36-* cp37-* cp38-* pp*"
+          CIBW_SKIP: "cp38-* pp* gp*"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux2014"
           CIBW_MANYLINUX_I686_IMAGE: "manylinux2014"
           CIBW_MANYLINUX_AARCH64_IMAGE: "manylinux2014"
@@ -24,7 +24,7 @@ jobs:
             wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
             tar -xf v8.0.2.tar.gz &&
             cd qhull-8.0.2 &&
-            cmake -S . -B build &&
+            cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5  -S . -B build &&
             cmake --build build --target install
       - uses: actions/upload-artifact@v4
         with:
@@ -36,10 +36,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pypa/cibuildwheel@v2.21
+      - uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: "*-manylinux_x86_64 *-manylinux_aarch64"
-          CIBW_SKIP: "cp36-* cp37-* cp38-* pp*"
+          CIBW_SKIP: "cp38-* pp* gp*"
           CIBW_MANYLINUX_X86_64_IMAGE: "manylinux_2_28"
           CIBW_MANYLINUX_I686_IMAGE: "manylinux_2_28"
           CIBW_MANYLINUX_AARCH64_IMAGE: "manylinux_2_28"
@@ -50,7 +50,7 @@ jobs:
             wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
             tar -xf v8.0.2.tar.gz &&
             cd qhull-8.0.2 &&
-            cmake -S . -B build &&
+            cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5  -S . -B build &&
             cmake --build build --target install
       - uses: actions/upload-artifact@v4
         with:
@@ -62,17 +62,17 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pypa/cibuildwheel@v2.21
+      - uses: pypa/cibuildwheel@v3.2.1
         env:
           CIBW_BUILD: "*-musllinux_x86_64 *-musllinux_i686 *-musllinux_aarch64"
-          CIBW_SKIP: "cp36-* cp37-* cp38-* pp*"
+          CIBW_SKIP: "cp38-* pp* gp*"
           CIBW_BEFORE_ALL_LINUX: >
             apk update &&
             apk add wget &&
             wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
             tar -xf v8.0.2.tar.gz &&
             cd qhull-8.0.2 &&
-            cmake -S . -B build &&
+            cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -S . -B build &&
             cmake --build build --target install
       - uses: actions/upload-artifact@v4
         with:
@@ -84,15 +84,15 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pypa/cibuildwheel@v2.21
+      - uses: pypa/cibuildwheel@v3.2.1
         env:
-          CIBW_SKIP: "cp36-* cp37-* cp38-* pp*"
+          CIBW_SKIP: "cp38-* pp* gp*"
           CIBW_ARCHS_MACOS: "x86_64 universal2"
           CIBW_BEFORE_ALL_MACOS: >
             wget https://github.com/qhull/qhull/archive/refs/tags/v8.0.2.tar.gz &&
             tar -xf v8.0.2.tar.gz &&
             cd qhull-8.0.2 &&
-            cmake -DCMAKE_OSX_ARCHITECTURES='x86_64;arm64' -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_LIBS=ON -DBUILD_APPLICATIONS=OFF -S . -B build &&
+            cmake -DCMAKE_POLICY_VERSION_MINIMUM=3.5 -DCMAKE_OSX_ARCHITECTURES='x86_64;arm64' -DBUILD_SHARED_LIBS=OFF -DBUILD_STATIC_LIBS=ON -DBUILD_APPLICATIONS=OFF -S . -B build &&
             sudo cmake --build build --target install
       - uses: actions/upload-artifact@v4
         with:
@@ -103,7 +103,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13", "3.14"]
     name: Build wheels for Windows (${{ matrix.python-version }})
     runs-on: windows-latest
     steps:
