--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ build-backend = "scikit_build_core.build"
 
 [project]
 name = "gdstk"
-version = "0.9.62"
+version = "1.0.0"
 authors = [{name = "Lucas H. Gabrielli", email = "heitzmann@gmail.com"}]
 description = "Python module for creation and manipulation of GDSII files."
 readme = "README.md"
 keywords = ["GDSII", "OASIS", "CAD",  "layout"]
 classifiers = [
-    "Development Status :: 3 - Alpha",
+    "Development Status :: 5 - Production/Stable",
     "Environment :: Console",
     "Intended Audience :: Developers",
     "Intended Audience :: Manufacturing",
